<resources>
    <string name="app_name" translatable="false">Pojav ZH</string>
    <string name="app_short_name" translatable="false">Pojav ZH</string>
    <string name="zh_account_text">Please select a login method</string>
    <string name="zh_account_microsoft_ccount">Microsoft Account</string>
    <string name="zh_account_local_account">Local account</string>
    <string name="zh_account_login_local_name">Username</string>
    <string name="zh_account_login_start">Login started !</string>
    <string name="zh_activity_import_control">Layout Name Control:</string>
    <string name="zh_activity_java_gui_keyboard">Keyboard</string>
    <string name="zh_activity_java_gui_paste">Paste</string>
    <string name="zh_controls_add_control_button">Button</string>
    <string name="zh_controls_add_control_drawer">Drawer</string>
    <string name="zh_controls_visibility">Visibility</string>
    <string name="zh_controls_in_game">In game</string>
    <string name="zh_controls_in_menu">In menu</string>
    <string name="zh_controls_unsupported_layout_version">Unsupported control layout version</string>
    <string name="zh_controls_create_new">Create new control layout</string>
    <string name="zh_controls_create_new_title">Control layout name:</string>
    <string name="zh_controls_import_control">Import control layout</string>
    <string name="zh_custom_control_title">Control Layout Management</string>
    <string name="zh_custom_control_desc">Manage all control layout files, where you can delete, create, rename, import control layouts, etc.</string>
    <string name="zh_return">Return</string>
    <string name="zh_file_add_file">Add file</string>
    <string name="zh_file_add_file_tip">Please select a file with the suffix "%s"</string>
    <string name="zh_file_create_file">Create</string>
    <string name="zh_file_create_file_invalid">Cannot have the same name as an existing file!</string>
    <string name="zh_file_does_not_exist">This folder (or file) doesn\'t exist</string>
    <string name="zh_file_tips">Operate this file</string>
    <string name="zh_file_message">Please select the operation you want to perform on this file. Click on a blank area of the screen to close this window.</string>
    <string name="zh_file_message_main">(Please note that all files in this directory are very important, mishandling may cause the game to fail to launch!)</string>
    <string name="zh_file_added">File added successfully</string>
    <string name="zh_file_delete">Are you sure you want to delete this file?</string>
    <string name="zh_file_delete_dir">Are you sure you want to delete this folder?</string>
    <string name="zh_file_delete_dir_message">When deleting a folder, all the files inside it will be deleted as well. If there are important files inside this folder, please cancel this operation!</string>
    <string name="zh_file_delete_dir_success">The folder has been successfully deleted: </string>
    <string name="zh_file_delete_dir_fail">There was an issue during the deletion process. Please make sure that this folder can be deleted.</string>
    <string name="zh_file_deleted">Successfully deleted the file: </string>
    <string name="zh_file_rename">Rename</string>
    <string name="zh_file_renamed">File name modified: </string>
    <string name="zh_file_rename_empty">The file name cannot be empty!</string>
    <string name="zh_file_refresh">Refresh</string>
    <string name="zh_file_share">Share</string>
    <string name="zh_file_share_message">Are you sure you want to share this file?</string>
    <string name="zh_file_open">Open</string>
    <string name="zh_neoforge_dl_searching">Searching for NeoForge version number</string>
    <string name="zh_preference_category_language">Language</string>
    <string name="zh_preference_category_other_features">Other Features</string>
    <string name="zh_preference_chinese_language_title">Switch to Chinese language</string>
    <string name="zh_setting_set_to_chinese_desc">On first launch, automatically set game language to Chinese</string>
    <string name="zh_setting_set_to_chinese_title">Automatically set to Chinese</string>
    <string name="zh_setting_enable_log_output_desc">Enable the log output interface when the application officially starts running the game</string>
    <string name="zh_setting_enable_log_output_title">Enable log output on game startup</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_disable_gestures">Disable gestures</string>
    <string name="mcl_disable_gestures_subtitle">Disables gestures, such as hold to break block, and tap to place a block.</string>
    <string name="mcl_disable_swap_hand">Disable double tap to swap hands</string>
    <string name="mcl_disable_swap_hand_subtitle">Disables double tapping on the hotbar item to swap it in the second hand.</string>
    <string name="mcl_setting_subtitle_mousespeed">Changes the speed of the virtual mouse.</string>
    <string name="mcl_memory_allocation">Memory allocation</string>
    <string name="multirt_title">Runtime Manager</string>
    <string name="multirt_subtitle">Manage installed Java Runtimes.</string>
    <string name="preference_mouse_start_title">Start with virtual mouse on</string>
    <string name="preference_mouse_start_description">The virtual mouse appears at startup when this option is on.</string>
    <string name="preference_control_title">Control customization</string>
    <string name="preference_sustained_performance_title">Enable sustained performance mode</string>
    <string name="preference_sustained_performance_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_vsync_title">Force enable VSync</string>
    <string name="preference_force_vsync_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_english_title">Force language to English</string>
    <string name="preference_force_english_description">Allows you to see original strings, as intended by developers. Requires a restart.</string>
    <string name="preference_category_gyro_controls">Gyroscope controls</string>
    <string name="preference_category_virtual_mouse">Virtual mouse</string>
    <string name="preference_gyro_invert_x_axis">Invert X axis</string>
    <string name="preference_gyro_invert_y_axis">Invert Y axis</string>
    <string name="preference_gyro_invert_x_axis_description">Invert the horizontal axis.</string>
    <string name="preference_gyro_invert_y_axis_description">Invert the vertical axis.</string>
    <string name="preference_gyro_smoothing_title">Enable gyroscope smoothing</string>
    <string name="preference_gyro_smoothing_description">Reduce jitter in exchange of latency.</string>
    <string name="arc_capes_title">Cosmetica Capes</string>
    <string name="arc_capes_desc">Enables capes from Cosmetica (previously Arc). For more information please visit https://cosmetica.cc. Requires OptiFine.</string>
    <string name="preference_enable_gyro_title">Enable gyroscope controls</string>
    <string name="preference_enable_gyro_description">Enabling this will allow you to turn in-game by turning your phone.</string>
    <string name="preference_gyro_sensitivity_title">Gyroscope controls sensitivity</string>
    <string name="preference_gyro_sensitivity_description">Adjust the sensitivity of gyroscope controls.</string>
    <string name="preference_gyro_sample_rate_title">Gyroscope sampling rate</string>
    <string name="preference_gyro_sample_rate_description">If you have performance issues with gyroscope controls, increase this.</string>
    <string name="mcl_setting_title_buttonallcaps">Only use capital letters in button labels</string>
    <string name="mcl_setting_subtitle_buttonallcaps">Disable this if you want to use lowercase letters in your controls.</string>
    <string name="preference_shader_dump_title">Enable shader dumping</string>
    <string name="preference_shader_dump_description">Log converted shaders into the log file.</string>
    <string name="preference_category_controller_settings">Controller settings</string>
    <string name="preference_wipe_controller_title">Reset controller mapping</string>
    <string name="preference_wipe_controller_description">Allows you to remap the controller buttons.</string>
    <string name="preference_deadzone_scale_title">Joystick deadzone scale</string>
    <string name="preference_deadzone_scale_description">Increase it if the joystick drifts.</string>
    <string name="preference_force_big_core_title">Force the renderer to run on the big core</string>
    <string name="preference_force_big_core_desc">Forces the Minecraft render thread to run on the core with the highest maximum frequency.</string>
    <string name="preference_vulkan_driver_system_title">Use system Vulkan driver</string>
    <string name="preference_vulkan_driver_system_description">Force the launcher to use the system Vulkan driver instead of Turnip on Adreno GPUs. Only affects Zink and mods that use Vulkan.</string>
    <string name="preference_verify_manifest_title">Verify game version manifest</string>
    <string name="preference_verify_manifest_description">When enabled, the launcher will check the game version manifest along with the libraries.</string>
    <string name="preference_category_buttons">Buttons</string>
    <string name="preference_category_experimental_settings">Experimental fuckury</string>
    <string name="preference_category_java_tweaks">Java Tweaks</string>
    <string name="preference_category_miscellaneous">Miscellaneous settings</string>
    <string name="preference_category_video">Video settings</string>
    <string name="preference_ask_for_notification_title">Allow notifications</string>
    <string name="preference_ask_for_notification_description">Click to re-request the notification permission, required for game/modpack background downloads to work properly.</string>
    <string name="preference_vsync_in_zink_title">Allow V-Sync with Zink</string>
    <string name="preference_vsync_in_zink_description">Allows the launcher to use internal system APIs to enable V-Sync for Zink. Turn this off if your launcher suddenly crashes with Zink after a system update.</string>
</resources>