<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_control_title"
        app2:iconSpaceReserved="false" >

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableGestures"
            android:summary="@string/mcl_disable_gestures_subtitle"
            android:title="@string/mcl_disable_gestures"
            app2:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableDoubleTap"
            android:summary="@string/mcl_disable_swap_hand_subtitle"
            android:title="@string/mcl_disable_swap_hand"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="timeLongPressTrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            app2:showSeekBarValue="true"
            app2:seekBarIncrement="10"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_buttons"
        app2:iconSpaceReserved="false" >

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale"
            app2:showSeekBarValue="true"
            app2:seekBarIncrement="5"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="buttonAllCaps"
            android:defaultValue="true"
            android:title="@string/mcl_setting_title_buttonallcaps"
            android:summary="@string/mcl_setting_subtitle_buttonallcaps"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_virtual_mouse"
        app2:iconSpaceReserved="false" >

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale"
            android:title="@string/zh_mouse_settings_scale_name"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousespeed"
            android:summary="@string/mcl_setting_subtitle_mousespeed"
            android:title="@string/zh_mouse_settings_speed_name"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="mouse_start"
            android:defaultValue="true"
            android:title="@string/preference_mouse_start_title"
            android:summary="@string/preference_mouse_start_description"
            app2:iconSpaceReserved="false" />

        <Preference
            android:title="@string/zh_custom_mouse_title"
            android:summary="@string/zh_custom_mouse_desc"
            android:key="zh_custom_mouse"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="gyroCategory"
        android:title="@string/preference_category_gyro_controls"
        app2:iconSpaceReserved="false" >

        <SwitchPreference
            android:key="enableGyro"
            android:title="@string/preference_enable_gyro_title"
            android:summary="@string/preference_enable_gyro_description"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSensitivity"
            android:title="@string/preference_gyro_sensitivity_title"
            android:summary="@string/preference_gyro_sensitivity_description"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSampleRate"
            android:title="@string/preference_gyro_sample_rate_title"
            android:summary="@string/preference_gyro_sample_rate_description"
            app2:showSeekBarValue="true"
            app2:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="gyroSmoothing"
            android:title="@string/preference_gyro_smoothing_title"
            android:summary="@string/preference_gyro_smoothing_description"
            android:defaultValue="true"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="gyroInvertX"
            android:title="@string/preference_gyro_invert_x_axis"
            android:summary="@string/preference_gyro_invert_x_axis_description"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="gyroInvertY"
            android:title="@string/preference_gyro_invert_y_axis"
            android:summary="@string/preference_gyro_invert_y_axis_description"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_controller_settings"
        app2:iconSpaceReserved="false" >

        <net.kdt.pojavlaunch.prefs.GamepadRemapPreference
            android:title="@string/preference_wipe_controller_title"
            android:summary="@string/preference_wipe_controller_description"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gamepad_deadzone_scale"
            android:title="@string/preference_deadzone_scale_title"
            android:summary="@string/preference_deadzone_scale_description"
            app2:showSeekBarValue="true"
            app2:seekBarIncrement="5"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>