<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_category_miscellaneous"
        app2:iconSpaceReserved="false" >

        <SwitchPreference
            android:defaultValue="false"
            android:key="arc_capes"
            android:summary="@string/arc_capes_desc"
            android:title="@string/arc_capes_title"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

    <SwitchPreference
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        app2:iconSpaceReserved="false" />

    <Preference
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        app2:iconSpaceReserved="false" />

</PreferenceScreen>