<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_category_video"
        app2:iconSpaceReserved="false" >

        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            app2:useSimpleSummaryProvider="true"
            app2:iconSpaceReserved="false" />

        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer_exp"
            android:defaultValue="opengles2"
            app2:useSimpleSummaryProvider="true"
            app2:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            app2:iconSpaceReserved="false" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            app2:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            app2:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            app2:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="vsync_in_zink"
            android:summary="@string/preference_vsync_in_zink_description"
            android:title="@string/preference_vsync_in_zink_title"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>