<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/zh_preference_category_language">
        <SwitchPreference
            android:defaultValue="true"
            android:key="setToChinese"
            android:summary="@string/zh_setting_set_to_chinese_desc"
            android:title="@string/zh_setting_set_to_chinese_title" />

        <androidx.preference.ListPreference
            android:key="switchToChineseLanguage"
            android:entries="@array/chinese_language_names"
            android:entryValues="@array/chinese_language_values"
            android:title="@string/zh_preference_chinese_language_title"
            app2:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/zh_preference_category_other_features">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableLogOutput"
            android:summary="@string/zh_setting_enable_log_output_desc"
            android:title="@string/zh_setting_enable_log_output_title" />

    </PreferenceCategory>

</PreferenceScreen>