<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_category_experimental_settings"
        app2:iconSpaceReserved="false" >

        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>