<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/video_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/preference_category_video"
                android:textColor="@color/settings_category" />

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsListView
                android:id="@+id/renderer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listViewKey="renderer"
                app:listViewTitle="@string/mcl_setting_category_renderer"
                app:listViewDefaultValue="opengles2"
                app:listViewNames="@array/renderer"
                app:listViewValues="@array/renderer_values"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/ignoreNotch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="ignoreNotch"
                app:switchViewTitle="@string/mcl_setting_title_ignore_notch"
                app:switchViewSummary="@string/mcl_setting_subtitle_ignore_notch"
                app:switchViewSwitchCheck="true"
                app:switchViewRequiresReboot="true"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSeekBarView
                android:id="@+id/resolutionRatio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:seekbarViewKey="resolutionRatio"
                app:seekbarViewTitle="@string/mcl_setting_title_resolution_scaler"
                app:seekbarViewSummary="@string/mcl_setting_subtitle_resolution_scaler"
                app:seekbarViewSeekBarMax="300"
                app:seekbarViewSeekBarMin="25"
                app:seekbarViewSuffix="%"
                app:seekbarViewDefaultValue="100"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/sustainedPerformance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="sustainedPerformance"
                app:switchViewTitle="@string/preference_sustained_performance_title"
                app:switchViewSummary="@string/preference_sustained_performance_description"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/alternate_surface_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="alternate_surface"
                app:switchViewTitle="@string/mcl_setting_title_use_surface_view"
                app:switchViewSummary="@string/mcl_setting_subtitle_use_surface_view"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/force_vsync_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="force_vsync"
                app:switchViewTitle="@string/preference_force_vsync_title"
                app:switchViewSummary="@string/preference_force_vsync_description"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/vsync_in_zink_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="vsync_in_zink"
                app:switchViewTitle="@string/preference_vsync_in_zink_title"
                app:switchViewSummary="@string/preference_vsync_in_zink_description"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>