<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/miscellaneous_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/preference_category_miscellaneous"
                android:textColor="@color/settings_category" />

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/arc_capes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="arc_capes"
                app:switchViewTitle="@string/arc_capes_title"
                app:switchViewSummary="@string/arc_capes_desc"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/verifyManifest_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="verifyManifest"
                app:switchViewTitle="@string/preference_verify_manifest_title"
                app:switchViewSummary="@string/preference_verify_manifest_description"
                app:switchViewSwitchCheck="true"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/zinkPreferSystemDriver_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="zinkPreferSystemDriver"
                app:switchViewTitle="@string/preference_vulkan_driver_system_title"
                app:switchViewSummary="@string/preference_vulkan_driver_system_description"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/force_english_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="force_english"
                app:switchViewTitle="@string/preference_force_english_title"
                app:switchViewSummary="@string/preference_force_english_description"
                app:switchViewRequiresReboot="true"/>

            <com.movtery.pojavzh.ui.fragment.settings.view.SettingsSwitchView
                android:id="@+id/notification_permission_request_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchViewKey="notification_permission_request"
                app:switchViewTitle="@string/preference_ask_for_notification_title"
                app:switchViewSummary="@string/preference_ask_for_notification_description" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>